# fake-news-detection-using-nlp

./: README.md  package-lock.json  package.json  pyproject.toml  wsgi.py
model/: model.h5  notebook.ipynb
static/: tailwind.css
templates/: index.html  news.html  results.html  verify.html
