[tool.poetry]
name = "DejaView"
version = "0.1.0"
description = ""
authors = ["Siddhesh Agarwal <siddhesh.agarwal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
keras = "^2.10.0"
pandas = "^1.5.1"
nltk = "^3.7"

[tool.poetry.dev-dependencies]
nltk = "^3.7"
Keras-Preprocessing = "^1.1.2"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
skip = ['env']
